; ModuleID = '/home/carl/AnghaBench/linux/fs/cifs/extr_smb2pdu.c_SMB2_set_compression.c'
source_filename = "/home/carl/AnghaBench/linux/fs/cifs/extr_smb2pdu.c_SMB2_set_compression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifs_tcon = type { i32 }
%struct.compress_ioctl = type { i32 }

@COMPRESSION_FORMAT_DEFAULT = common dso_local global i32 0, align 4
@FSCTL_SET_COMPRESSION = common dso_local global i32 0, align 4
@CIFSMaxBufSize = common dso_local global i32 0, align 4
@FYI = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"set compression rc %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SMB2_set_compression(i32 %0, %struct.cifs_tcon* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.cifs_tcon*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.compress_ioctl, align 4
  %11 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.cifs_tcon* %1, %struct.cifs_tcon** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i8* null, i8** %11, align 8
  %12 = load i32, i32* @COMPRESSION_FORMAT_DEFAULT, align 4
  %13 = call i32 @cpu_to_le16(i32 %12)
  %14 = getelementptr inbounds %struct.compress_ioctl, %struct.compress_ioctl* %10, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.cifs_tcon*, %struct.cifs_tcon** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* @FSCTL_SET_COMPRESSION, align 4
  %20 = bitcast %struct.compress_ioctl* %10 to i8*
  %21 = load i32, i32* @CIFSMaxBufSize, align 4
  %22 = call i32 @SMB2_ioctl(i32 %15, %struct.cifs_tcon* %16, i32 %17, i32 %18, i32 %19, i32 1, i8* %20, i32 2, i32 %21, i8** %11, i32* null)
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* @FYI, align 4
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @cifs_dbg(i32 %23, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %24)
  %26 = load i32, i32* %9, align 4
  ret i32 %26
}

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @SMB2_ioctl(i32, %struct.cifs_tcon*, i32, i32, i32, i32, i8*, i32, i32, i8**, i32*) #1

declare dso_local i32 @cifs_dbg(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
